--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "node": "^18.14.0",
-    "npm": "^9.3.1",
     "aos": "^2.3.4",
     "assets": "^3.0.1",
     "bootstrap": "^5.1.3",
+    "node": "^18.14.0",
+    "npm": "^9.3.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-dom": "17.0.2",
     "react-helmet-async": "^1.3.0",
     "react-mailchimp-subscribe": "^2.1.3",
+    "react-modern-audio-player": "^1.4.0-rc.2",
     "react-responsive": "^9.0.0-beta.10",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
